<resources>
    <string name="app_name">Sudoku</string>
    <string name="sudoku">SUDOKU</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="easy">EASY</string>
    <string name="hard">HARD</string>
    <string name="medium">MEDIUM</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="restart">RESTART</string>
    <string name="timer_n_wip">Timer:\n WIP</string>
    <string name="selected">Selected:</string>
    <string name="playing">Playing:</string>
</resources>