<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/schemeGreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/sudoku"
            android:typeface="monospace"
            android:textAlignment="center"
            android:textColor="@color/schemeYellow"
            android:background="@color/schemeDarkGreen"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:letterSpacing="0.2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/schemeGreen"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/schemeLime">

            <Button
                android:id="@+id/btnDiffEasy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/schemeLime"
                android:text="@string/easy"
                android:textColor="#004D40"
                android:textSize="18sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/schemeGreen"/>

            <Button
                android:id="@+id/btnDiffMedium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/schemeLime"
                android:text="@string/medium"
                android:textColor="#004D40"
                android:textSize="18sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/schemeGreen"/>

            <Button
                android:id="@+id/btnDiffHard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/schemeLime"
                android:text="@string/hard"
                android:textColor="#004D40"
                android:textSize="18sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/schemeDarkGreen"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/schemeDarkGreen">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/playing"
                android:textSize="25sp"
                android:textColor="@color/schemeLime"
                android:textAlignment="center"
                android:id="@+id/playingText"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/selected"
                android:textSize="25sp"
                android:textColor="@color/schemeLime"
                android:textAlignment="center"
                android:id="@+id/selectedText"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/timer_n_wip"
                android:textSize="25sp"
                android:textColor="@color/schemeLime"
                android:textAlignment="center"
                android:id="@+id/timerText"/>
        </LinearLayout>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:rowCount="9"
        android:columnCount="9"
        android:id="@+id/sudokuGrid"
        >

    </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/schemeDarkGreen">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/schemeDarkGreen"
            />
        <LinearLayout
            android:id="@+id/numberBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:background="@color/sudokuOne"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:background="@color/sudokuTwo"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:background="@color/sudokuThree"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:background="@color/sudokuFour"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:background="@color/sudokuFive"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:background="@color/sudokuSix"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:background="@color/sudokuSeven"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:background="@color/sudokuEight"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:background="@color/sudokuNine"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="10"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/schemeDarkGreen"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="@color/schemeLime">

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/schemeLime"
                android:text="@string/restart"
                android:textColor="#004D40"
                android:textSize="18sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/schemeGreen"/>

            <Button
                android:id="@+id/btnHighscores"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/schemeLime"
                android:text="@string/highscores"
                android:textColor="#004D40"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>